syntax = "proto3";

package userpb;

option go_package = "/buffers";

enum Status {
    SUCCESS = 0;
    FAILED = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    uint32 age = 3;
    string password = 4;
}

message CreateUserResponse {
    int32 status = 1;
    string body = 2;
}

message GetUserByIdRequest {
    string userId = 1;
}

message GetUserByIdResponse {
    string userId = 1;
    string name = 2;
    string email = 3;
    uint32 age = 4;
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message UserLoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message UserLogoutRequest {
    string token = 1;
}

message UserLogoutResponse {
    Status is_done = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc Login(UserLoginRequest) returns (UserLoginResponse);
    rpc Logout(UserLogoutRequest) returns (UserLogoutResponse);
}
